Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24985

QGLTexture2D: cannot change LinearFiltering bind option without full re-upload of the texture

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0
    • 5.0.0
    • Qt3D
    • None

      Setting the GL_NEAREST/GL_LINEAR filter parameter on a texture can be done without re-uploading the texture's image from scratch, however this ability is not available through the QGLTexture2D API. This would be very useful so that for situations where changing between GL_NEAREST and GL_LINEAR is necessary or desirable, this change can be made without uploading two textures or keeping the original image data around and re-uploading (which comes at a sometimes significant time cost).

      http://codereview.qt-project.org/#change,21497 contains a suggested patch to implement this ability.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes