Setting LinearFiltering bind option should not trigger re-upload

The LinearFlitering bind option can be applied without incrementing
imageGeneration and triggering a full-reupload of the texture. This
separates handling of this option from the other bind options to
allow this use case.

Task-number: QTBUG-24985

Change-Id: I097ea7d1334bc82d7985e4b5c222d57b7d840cf9
Reviewed-by: Sarah Jane Smith <sarah.j.smith@nokia.com>